demos/fleets/default-configs/tenants/llm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-service-global
  namespace: inference
spec:
  selector:
    app: gemma-server
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    appProtocol: HTTP
  - name: health
    protocol: TCP
    port: 15021
    targetPort: 15021
    appProtocol: HTTP
